--- a/JS/09.dom.html
+++ b/JS/09.dom.html
@@ -9,15 +9,15 @@
       <script> 
       
       console.log(document.querySelector('button'))
-      /*console.log(document.title)
+      console.log(document.querySelector('Title'))
+      console.log(document.title)
       document.title='Changed';
 
-      console.log(document.body);
+      /*console.log(document.body);
       console.log(typeof document.body)
 
       console.log(document.body.innerHTML)
       document.body.innerHTML='<button>goodJob</button>'*/
-      b
       /*
         document.body.innerHTML='hello'; 
         document.title='String goodJob'
